<resources>
    <string name="app_name">Droid Cart</string>
    <string name="save_item">SAVE ITEM</string>
    <string name="Stock">Quantity in Stock</string>
    <string name="Price">Item Price</string>
    <string name="Name_of_item">Item Name</string>
    <string name="btn_sell">Sell</string>
    <string name="btn_delete">Delete</string>
    <string name="edit_item">Edit Item</string>
    <string name="Item">Item Name</string>
    <string name="item_details">Item Details</string>

    <string name="Floatingbtn">floating_Button</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_question">De;lete this Item ?</string>
</resources>